just a few cleanup items to make it a little better

--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -124,10 +124,6 @@ jobs:
         working-directory: ${{ env.TF_WORKING_DIR }}
         run: terraform init
 
-      - name: "Terraform Plan"
-        working-directory: ${{ env.TF_WORKING_DIR }}
-        run: terraform plan -out=tfplan
-
       - name: "Terraform Apply"
         working-directory: ${{ env.TF_WORKING_DIR }}
-        run: terraform apply -auto-approve ${{ inputs.terraform_xargs }} tfplan
+        run: terraform destroy -auto-approve ${{ inputs.terraform_xargs }}
